--- a/templates/likeScript.html.twig
+++ b/templates/likeScript.html.twig
@@ -18,7 +18,7 @@
                 <option value="1">1</option>
             </select>
         </div>
-        <a  class="btn btn-primary " id="likeBtn-{{ article.id }}">Like</a>
+        <a  class="btn btn-primary " id="likeBtn-{{ article.id }}">Vote!</a>
         <div  class="btn disabled"   id="votes-{{ article.id }}">{{ article.votes }} Points</div>
         {% endif %}
        {% endblock %}
