--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark navbar-expand-md bg-primary justify-content-between">
+<nav class="navbar navbar-dark navbar-expand-md bg-primary justify-content-between fixed-top  mb-5">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
             <span class="navbar-toggler-icon"></span>
@@ -19,14 +19,7 @@
         <a href="/" class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25 p-0" ><img src="{{ asset('logo/logo.png') }}" style="height: 50px;width: 150px"></a>
         <div class="navbar-collapse collapse dual-nav w-50 order-2">
             <ul class="nav navbar-nav ml-auto">
-                <form class="ml-3 my-auto d-inline w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-right-0" placeholder="...">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-dark border-left-0" type="button">Go</button>
-                        </div>
-                    </div>
-                </form>
+
             </ul>
         </div>
     </div>
