--- a/templates/ranking.html.twig
+++ b/templates/ranking.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-    <div class="container mt-3 text-center">
+    <div class="container pt-5 mt-5 text-center">
         <h3>Top of the class</h3>
 <table class="table">
     <thead class="thead-dark">
