--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="" crossorigin="anonymous">
-            <link rel="stylesheet" href="/css/mycss.css">
+            <link rel="stylesheet" href="css/mycss.css">
         {% endblock %}
         {% block javascripts %}
             <!-- JS, Popper.js, and jQuery -->
@@ -23,7 +24,12 @@
     </head>
     <body>
     {{ include('navbar.html.twig') }}
-        {% block body %}<h1>Hello Practica</h1>{% endblock %}
+
+{#        {% for message in app.flashes('success') %}#}
+{#            <div class="alert alert-success">{{ message }}</div>#}
+{#        {% endfor %}#}
+
+        {% block body %}{% endblock %}
 
 
 
