--- a/templates/ranking.html.twig
+++ b/templates/ranking.html.twig
@@ -3,13 +3,13 @@
 
 {% block body %}
     <div class="container pt-5 mt-5 text-center">
-        <h3>Top of the class</h3>
-<table class="table">
-    <thead class="thead-dark">
+        <h3 class="mb-5 mt-5">Top of the class</h3>
+<table class="table ">
+    <thead class="thead-light">
     <tr>
 
         <th scope="col">Name</th>
-        <th scope="col">Votes</th>
+        <th scope="col">Points</th>
 
     </tr>
     </thead>
