--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -8,3 +8,27 @@
     -webkit-box-orient: vertical;
 }
 
+.masthead {
+    height: 100vh;
+    min-height: 500px;
+    background-image: url('https://images.unsplash.com/photo-1455849318743-b2233052fcff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+body {
+    font-family: "Gill Sans", sans-serif;
+    background-color: 	#F8F8F8;
+}
+
+.small-card {
+    font-size: .8rem;
+}
+
+.block-with-text2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
