--- a/templates/likeScript.html.twig
+++ b/templates/likeScript.html.twig
@@ -18,7 +18,7 @@
                 <option value="1">1</option>
             </select>
         </div>
-        <a  class="btn btn-primary " id="likeBtn-{{ article.id }}">Vote!</a>
+        <a  class="btn btn-outline-dark my-2 my-sm-0 ml-1" id="likeBtn-{{ article.id }}">Vote!</a>
         <div  class="btn disabled"   id="votes-{{ article.id }}">{{ article.votes }} Points</div>
         {% endif %}
        {% endblock %}
@@ -37,8 +37,6 @@
             async: true,
             success: function (data)
             {
-
-
                 $('div#votes-{{ article.id }}').html(data.likes + ' Points');
                 $('#likeBtn-{{ article.id }}').hide();
                 $('#vote-{{ article.id }}').hide();
