--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-dark navbar-expand-md bg-primary justify-content-between fixed-top  mb-5">
+<nav class="navbar navbar-light navbar-expand-md bg-light shadow justify-content-between fixed-top  mb-5">
+
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
             <span class="navbar-toggler-icon"></span>
@@ -21,6 +22,10 @@
             <ul class="nav navbar-nav ml-auto">
 
             </ul>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
