--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -3,99 +3,158 @@
 {% block title %}Influencer's Article{% endblock %}
 
 {% block body %}
-    <div class="container pt-5 mt-5">
-        <div class="card mb-4">
-            <div class="card-footer text-muted m-0 p-0">
-                <div class="card-header row m-0 ">
-                    <div class="col-6 d-flex justify-content-start inline-block">
-                        <a href="/authorsView/{{ article.author.id }}">{{ article.author.name }}</a>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end inline-block">
-                        {{ article.date|date("Y/m/d") }}
-                    </div>
+<div class="container pt-5 mt-5" >
+    <div class="card mb-4">
+        <div class="card-footer text-muted m-0 p-0">
+            <div class="card-header row m-0 navbar-light bg-light shadow">
+                <div class="col-6 d-flex justify-content-start inline-block">
+                    <a href="/authorsView/{{ article.author.id }}">{{ article.author.name }}</a>
+                </div>
+                <div class="col-6 d-flex justify-content-end inline-block">
+                    {{ article.date|date("Y/m/d") }}
                 </div>
             </div>
+        </div>
 
-            <div class="card-body">
-                <h2 class="card-title text-center ">{{ article.title }}</h2>
-                {% if article.image != null %}
-                    <img class="card-img-top" src="{{ asset('images/' ~  article.image ) }}"
-                         alt="Something is not right">
-                {% endif %}
-                <p class="card-text ">{{ article.content }}</p>
-                <div class="row card-text mb-3 text-muted">
-                    {% set tags = article.tags|split(' ') %}
-                    {% for tag in tags|slice(0, 10) %}
-                        <div class="col "><a href="/tags/{{ tag }}">{{ tag }}</a></div>
-                    {% endfor %}
+        <div class="card-body">
+            <h2 class="card-title text-center ">{{ article.title }}</h2>
+            {% if article.image != null %}
+                <img class="card-img-top mb-3 rounded mx-auto" src="{{ asset('images/' ~  article.image ) }}"
+                     alt="Something is not right">
+            {% endif %}
+            <p class="card-text ">{{ article.content }}</p>
+            <div class="row card-text mb-3 text-muted">
+                {% set tags = article.tags|split(' ') %}
+                {% for tag in tags|slice(0, 10) %}
+                    <div class="col "><a href="/tags/{{ tag }}">{{ tag }}</a></div>
+                {% endfor %}
+            </div>
+            <div class=" row m-0 ">
+                <div class="col-6 d-flex justify-content-start inline-block">
+                    <a href="/" class="btn btn-outline-dark my-2 my-sm-0">Back</a>
                 </div>
-                <div class=" row m-0 ">
-                    <div class="col-6 d-flex justify-content-start inline-block">
-                        <a href="/" class="btn btn-primary">Back</a>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end inline-block">
-                        {% include 'likeScript.html.twig' %}
-                    </div>
+                <div class="col-6 d-flex justify-content-end inline-block">
+                    {% include 'likeScript.html.twig' %}
                 </div>
             </div>
-                {% if article.votes == 0 %}
+        </div>
+        {% if article.votes == 0 %}
             <div class=" row m-0 ">
                 <div class="col-6 d-flex justify-content-end inline-block">
                     <a href="{{ path('edit', {
-                        id: article.id }) }}" class="btn btn-primary">Edit</a>
-                    <a id="delete" class="btn btn-primary">Delete</a>
+                        id: article.id }) }}" class="btn btn-outline-dark my-2 my-sm-0">Edit</a>
+                    <a id="delete" class="btn btn-outline-dark my-2 my-sm-0 ml-3">Delete</a>
                 </div>
             </div>
-                {% endif %}
-            </div>
-        </div>
-        <div class="container">
-
-                <h3 class="text-center">
-                    Same author
-                </h3>
-
-
-            <div class="row">
-                {% for article in articlesAuthor %}
-                    <div class="col-6 d-flex justify-content-center">
-                        <a href="/current/{{ article.id }}/{{ article.tags }}/{{ article.author.id }}">{{ article.title }} - {{ article.votes }} points</a>
-                    </div>
-                {% endfor %}
-                <hr>
-            </div>
-            <h3 class="text-center">
-                Same Tags
-            </h3>
-            <div class="row">
-                {% for article in articlesTags %}
-                    <div class="col-6 m-auto d-flex justify-content-center ">
-                        <a href="/current/{{ article.id }}/{{ article.tags }}/{{ article.author.id }}">{{ article.title }} - {{ article.votes }} points</a>
-                    </div>
-                {% endfor %}
-                <br>
-            </div>
-        </div>
+        {% endif %}
     </div>
-    <script>
-        $(document).on('click', '#delete', function(){
-            $.ajax({
-                url:'http://localhost/api/articles/{{ article.id }}',
-                type: "DELETE",
-                dataType: "json",
-                data: {
-                },
-                async: true,
-                success: function ()
-                {
+</div>
+<div class="container">
 
-                    alert("Deleted");
-                    window.location = '/';
-                }
-            });
-            return false;
-        });
-    </script>
+    <h3 class="text-center">
+        Same author
+    </h3>
 
-{% endblock %}
+
+    <div class="row ">
+        {% for article in articlesAuthor|slice(0, 3) %}
+            <div class="col ">
+                <div class="card mb-4 mt-4 body small-card" style="height: 200px;width: 250px ;font-size: 0.8rem">
+                    <div class="card-header row m-0 navbar-light bg-light shadow">
+                        <div class="col-6 d-flex justify-content-start inline-block">
+                            <a href="/authorsView/{{ article.author.id }}">{{ article.author.name }}</a>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end inline-block">
+                            {{ article.date|date("Y/m/d") }}
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <h6 class="card-title text-center"><a href="/current/{{ article.id }}/{{ article.tags }}/{{ article.author.id }}"
+                            >{{ article.title }}</a></h6>
+                        <p class="card-text "
+                           style="    overflow: hidden;
+                                        display: -webkit-box;
+                                        -webkit-line-clamp: 3;
+                                        -webkit-box-orient: vertical;">
+                            {{ article.content }}
+                        </p>
+                        <div class="row card-text mb-3 text-muted">
+                            {% set tags = article.tags|split(' ') %}
+                            {% for tag in tags|slice(0, 3) %}
+                                <div class="col "><a class="text-primary" href="/tags/{{ tag }}">{{ tag }}</a></div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
+        <hr>
+    </div>
+
+    <h3 class="text-center">
+        Same Tags
+    </h3>
+
+
+    <div class="row ">
+        {% for article in articlesTags|slice(0, 3) %}
+            <div class="col ">
+                <div class="card mb-4 mt-4 body small-card" style="height: 200px;width: 250px ;font-size: 0.8rem">
+                    <div class="card-footer text-muted m-0 p-0">
+                        <div class="card-header row m-0 navbar-light bg-light shadow">
+                            <div class="col-12 d-flex justify-content-center inline-block">
+                                {{ article.date|date("Y/m/d") }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <h6 class="card-title text-center">
+
+                            <a href="/current/{{ article.id }}/{{ article.tags }}/{{ article.author.id }}"
+                              >{{ article.title }}</a>
+                        </h6>
+                        <p class="card-text "
+                           style="    overflow: hidden;
+                                        display: -webkit-box;
+                                        -webkit-line-clamp: 3;
+                                        -webkit-box-orient: vertical;">
+                            {{ article.content }}
+                        </p>
+                        <div class="row card-text mb-3 text-muted">
+                            {% set tags = article.tags|split(' ') %}
+                            {% for tag in tags|slice(0, 3) %}
+                                <div class="col "><a class="text-primary" href="/tags/{{ tag }}">{{ tag }}</a></div>
+                            {% endfor %}
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+                        <br>
+                    </div>
+                </div>
+            </div>
+            <script>
+                $(document).on('click', '#delete', function () {
+                    $.ajax({
+                        url: 'http://localhost/api/articles/{{ article.id }}',
+                        type: "DELETE",
+                        dataType: "json",
+                        data: {},
+                        async: true,
+                        success: function () {
+
+                            alert("Deleted");
+                            window.location = '/';
+                        }
+                    });
+                    return false;
+                });
+            </script>
+
+            {% endblock %}
 
