--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
 
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="" crossorigin="anonymous">
-            <link rel="stylesheet" href="css/mycss.css">
+{#            <link rel="stylesheet" href="css/mycss.css">#}
+            <link rel="stylesheet" href={{ asset('css/mycss.css') }}>
         {% endblock %}
         {% block javascripts %}
             <!-- JS, Popper.js, and jQuery -->
