--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -23,9 +23,19 @@
 
             </ul>
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" name="searchInput" placeholder="Search" aria-label="Search">
+                <a  class="btn btn-outline-dark my-2 my-sm-0" id="search" type="submit" >Search</a>
             </form>
         </div>
     </div>
 </nav>
+
+<script>
+    $(document).on('click', 'a#search', function(){
+        var value = $('input[name="searchInput"]').val();
+        console.log(value);
+        window.location = '/search/'+ value;
+
+        return false;
+    });
+</script>
