--- a/templates/indexv3.html.twig
+++ b/templates/indexv3.html.twig
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
-
+                    <img src="{{ asset('logoheader2.png') }}">
                 </div>
             </div>
         </div>
