--- a/templates/newArticle.html.twig
+++ b/templates/newArticle.html.twig
@@ -20,7 +20,7 @@
         <div class="row">
         <div class="form-group col-6">
             <label for="name">Name</label>
-            <input type="text" class="form-control" minlength="4" id="name" name="name" placeholder="Mihai Ion">
+            <input type="text" class="form-control" required minlength="4" id="name" name="name" placeholder="Mihai Ion">
         </div>
         <div class="form-group col-6">
             <label for="email">Email address</label>
@@ -29,11 +29,11 @@
         </div>
         <div class="form-group">
             <label for="title">Title</label>
-            <textarea class="form-control" id="title" minlength="10" maxlength="30" name="title" rows="3"></textarea>
+            <textarea class="form-control" id="title"  required minlength="10" maxlength="30" name="title" rows="3"></textarea>
         </div>
         <div class="form-group">
             <label for="content">Content</label>
-            <textarea class="form-control" id="content" minlength="20" name="content" rows="7"></textarea>
+            <textarea class="form-control" id="content" required minlength="20" name="content" rows="7"></textarea>
         </div>
         <div class="form-group">
             <label for="tags">Tags</label>
